<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ming"
    android:contentDescription="@string/image_content"
    android:padding="10dp"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/main_activity_sw_simulate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/coda"
        android:text="@string/switch_text"
        android:textColor="@color/onyx"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/main_Activity_iv_coin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/button_simulate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_activity_sw_simulate"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_thumb_up" />

    <Button
        android:id="@+id/main_activity_bt_flip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:backgroundTint="@color/timber_wolf"
        android:fontFamily="@font/coda"
        android:text="@string/button_flip"
        android:textColor="@color/onyx"
        android:textSize="18sp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/main_activity_bt_reset"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_Activity_iv_coin"
        app:layout_constraintVertical_bias="0.07999998" />

    <Button
        android:id="@+id/main_activity_bt_reset"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:backgroundTint="@color/timber_wolf"
        android:fontFamily="@font/coda"
        android:text="@string/button_reset"
        android:textColor="@color/onyx"
        android:textSize="18sp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/main_activity_bt_flip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/main_activity_bt_flip"
        app:layout_constraintTop_toTopOf="@+id/main_activity_bt_flip" />

    <TextView
        android:id="@+id/main_activity_tv_flips"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:fontFamily="@font/coda"
        android:text="@string/text_view_flip"
        android:textAlignment="center"
        android:textColor="@color/maize"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/main_activity_tv_heads"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_activity_bt_flip"
        app:layout_constraintVertical_bias="0.01999998"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintWidth_percent=".7" />

    <TextView
        android:id="@+id/main_activity_tv_heads"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:fontFamily="@font/coda"
        android:text="@string/text_view_heads"
        android:textAlignment="center"
        android:textColor="@color/maize"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/main_activity_tv_tails"
        app:layout_constraintEnd_toEndOf="@+id/main_activity_tv_flips"
        app:layout_constraintStart_toStartOf="@+id/main_activity_tv_flips"
        app:layout_constraintTop_toBottomOf="@+id/main_activity_tv_flips"
        app:layout_constraintWidth_percent=".7" />

    <TextView
        android:id="@+id/main_activity_tv_tails"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:fontFamily="@font/coda"
        android:text="@string/text_view_tails"
        android:textAlignment="center"
        android:textColor="@color/maize"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/main_activity_tv_heads"
        app:layout_constraintStart_toStartOf="@+id/main_activity_tv_heads"
        app:layout_constraintTop_toBottomOf="@+id/main_activity_tv_heads"
        app:layout_constraintWidth_percent=".7" />

    <TextView
        android:id="@+id/main_activity_tv_tails_percent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:fontFamily="@font/coda"
        android:text="@string/teaxtViaw_tails_percent"
        android:textColor="@color/onyx"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/main_activity_pb_tails"
        app:layout_constraintEnd_toEndOf="@+id/main_activity_pb_tails"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/main_activity_pb_tails"
        app:layout_constraintTop_toBottomOf="@+id/main_activity_pb_heads"
        app:layout_constraintWidth_percent=".7" />

    <ProgressBar
        android:id="@+id/main_activity_pb_heads"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:max="100"
        android:progress="0"
        android:progressTint="@color/timber_wolf"
        app:layout_constraintBottom_toTopOf="@+id/main_activity_tv_tails_percent"
        app:layout_constraintEnd_toEndOf="@+id/main_activity_tv_tails_percent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/main_activity_tv_tails_percent"
        app:layout_constraintTop_toBottomOf="@+id/main_activity_tv_heads_percent"
        app:layout_constraintWidth_percent=".7" />

    <ProgressBar
        android:id="@+id/main_activity_pb_tails"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:max="100"
        android:progress="0"
        android:progressTint="@color/timber_wolf"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_activity_tv_tails_percent"
        app:layout_constraintWidth_percent=".7" />

    <TextView
        android:id="@+id/main_activity_tv_heads_percent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:fontFamily="@font/coda"
        android:text="@string/textView_heads_percent"
        android:textColor="@color/onyx"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/main_activity_pb_heads"
        app:layout_constraintEnd_toEndOf="@+id/main_activity_pb_heads"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/main_activity_pb_heads"
        app:layout_constraintTop_toBottomOf="@+id/main_activity_tv_tails"
        app:layout_constraintVertical_bias="0.050000012"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintWidth_percent=".7" />

    <EditText
        android:id="@+id/main_activity_et_submit_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/coda"
        android:hint="@string/submit_numer_text"
        android:inputType="number"
        android:textAlignment="center"
        android:textColorHint="@color/onyx"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/main_activity_bt_simulate"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_activity_pb_tails"
        app:layout_constraintVertical_bias="0.42000002" />

    <Button
        android:id="@+id/main_activity_bt_simulate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:backgroundTint="@color/onyx"
        android:fontFamily="@font/coda"
        android:text="@string/button_simulate"
        android:textColor="@color/timber_wolf"
        android:textSize="18sp"
        android:visibility="invisible"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/main_activity_et_submit_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/main_activity_et_submit_number"
        app:layout_constraintTop_toTopOf="@+id/main_activity_et_submit_number" />

</androidx.constraintlayout.widget.ConstraintLayout>